2009-07-06  kitone  <kitone@gna.org>

	* configure.in:
	Change dependence of enchant >= 1.4.0.

2009-07-02  kitone  <kitone@gna.org>

	* configure.in:
	Change dependence of gtkmm >= 2.14.

2009-06-24  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2009-06-23  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.33.0 release.

2009-06-22  kitone  <kitone@gna.org>

	* plugins/actions/splitsubtitle/splitsubtitle.cc:
	Improve split subtitle. Fix bug #13271 : Splitting italic subtitles.

2009-06-20  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	New action 'Generate Dummy Waveform'. Fix bug #13696 : Waveform window for silent films.

2009-06-14  kitone  <kitone@gna.org>

	* plugins/actions/splitsubtitle/splitsubtitle.cc:
	Split a subtitle for each lines and sets the duration according to number of
	characters in each part. Fix bug #13270.

2009-06-14  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/bitc/Makefile.am:
	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/bitc/bitc.se-plugin.in:
	* plugins/subtitleformats/bitc/dialog-bitc.glade:
	Introduce new subtitle format: BITC. Fix bug #12858.

2009-06-12  kitone  <kitone@gna.org>

	* plugins/actions/command/command.cc:
	Fix small typo.

2009-06-09  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	Introduce new plugin 'timingfromplayer'.

	* share/menubar.xml:
	* plugins/actions/timingfromplayer/Makefile.am:
	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	* plugins/actions/timingfromplayer/timingfromplayer.se-plugin.in:
	New plugin to define the subtitle time from the player position. This
	plugin is extract from videoplayermanagement (see previous commit) with a 
	new action 'Set Subtitle Start and End'. Fix bug #12570.

2009-06-09  kitone  <kitone@gna.org>
