@@ -1,3 +1,9 @@
+2009-07-13  kitone  <kitone@gna.org>
+
+	* src/subtitles.cc:
+	* src/subtitles.h:
+	Add select function from subtitle list.
+
 2009-07-06  kitone  <kitone@gna.org>
 
 	* configure.in:
